# chatbot-chariaa

./: .env  .gitignore  README.md  app.py  graph_visualisation.ipynb  main.py  pyproject.toml  requirements.txt  test_workflow.py
agents/: domain_agent.py  supervisor.py  tools.py
data/: explore_db.py  import_bukhari.py  import_quran.py  schema_77432.xlsx
graph/: state.py  workflow.py
rag/: database.py  embeddings.py  retriever.py
