[project]
name = "chatbot-charia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.10.2",
    "python-bidi>=0.6.7",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "termcolor>=3.3.0",
]
